--- a/test.html
+++ b/test.html
@@ -7,7 +7,8 @@
     <link href="style.css" rel="stylesheet" text="style/css">
 </head>
 <body>
-    
+    <div></div>
 </body>
 <script src=main.js></script>
+<script src="script.js"></script>
 </html>
