--- a/test.html
+++ b/test.html
@@ -7,7 +7,9 @@
     <link href="style.css" rel="stylesheet" text="style/css">
 </head>
 <body>
-    <div></div>
+    <div>
+        <h1>logo</h1>
+    </div>
 </body>
 <script src=main.js></script>
 <script src="script.js"></script>
