--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" text="style/css">
 </head>
 <body>
-    
+    <h2>Новый заголовок</h2>
 </body>
 <script src=main.js></script>
 </html>
